...
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="-6dp"
                android:background="#DDCCFF"
                android:elevation="4dp"
                android:text="Event Name"
                app:layout_constraintStart_toStartOf="@+id/event_name"
                app:layout_constraintTop_toTopOf="@+id/event_name"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/event_name"
                style="@style/FancyTextInputLayout"
                android:layout_width="280dp"
...
                app:endIconTint="#F64C4C"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/start_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"/>
...
                app:endIconTint="#F64C4C"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/end_date_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="none"/>
...
                android:hint="Lottery capacity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lottery_capacity_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

...
                android:textStyle="bold"
                app:backgroundTint="#673AB7"
                app:cornerRadius="24dp" />

            <!-- Save Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_event_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_primary"
                android:text="Save"
...
    <!--    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <!--        <EditText-->
    <!--            android:id="@+id/event_name_edittext"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginTop="64dp"-->
    <!--            android:hint="Enter the event name"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
...
