...
                            android:paddingHorizontal="17dp"
                            android:clipChildren="false"
                            android:clipToPadding="false"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/entrant_profile_name"
                                android:layout_width="match_parent"
                                android:layout_height="38dp"
                                android:focusedByDefault="true"
                                android:text=""
                                android:textColor="#1D1B20"
                                android:textSize="16sp" />
...
                            android:paddingHorizontal="17dp"
                            android:clipChildren="false"
                            android:clipToPadding="false"
                            android:orientation="vertical">

                            <EditText
                                android:id="@+id/entrant_profile_email"
                                android:layout_width="match_parent"
                                android:layout_height="38dp"
                                android:text="Your Email"
                                android:textColor="#1D1B20"
                                android:textSize="16sp"
                                android:inputType="textEmailAddress"/>
...
                            android:clipToPadding="false"
                            android:orientation="vertical"
                            android:paddingHorizontal="17dp"
                            android:paddingVertical="21dp">

                            <EditText
                                android:id="@+id/entrant_profile_phone"
                                android:layout_width="match_parent"
                                android:layout_height="38dp"
                                android:text=""
                                android:textColor="#1D1B20"
                                android:textSize="16sp" />
                        </LinearLayout>
...


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btnEditSave"
        android:layout_width="120dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#E0EDE7F6"
...
