...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- "Entrant View" Button -->
    <Button
        android:id="@+id/manage_facility_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#73673AB7"
        android:text="Manage Facility"
        android:textColor="@android:color/white"
        app:icon="@drawable/ic_location"
        app:iconSize="24dp"
        app:iconTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/manageEventsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.55"/>

...
